# gen-utils

./: Cargo.toml
examples/: recursive_files.rs
genutils_macro/: Cargo.toml
genutils_macro/src/: lib.rs
src/: gen_wrapper.rs  lib.rs
tests/: all.rs  parse.rs
