[package]
name = "genutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "genutils_macro"
]

[[tests]]
name = "tests"
path = "tests/all.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
genutils_macro = { path = "genutils_macro" }
